NQE: Hanging request and hanging throughput observation window detector

A URLRequest is heuristically marked as hanging if its value is M times more
than the transport RTT estimate, and/or N times the HTTP RTT estimate.

A throughput observation window is marked as hanging by comparing the duration
of the window with the HTTP RTT estimate, and the number of bytes received
during the window with the expected congestion window size.

Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Bug: 765378
Change-Id: Ia215102194a4426cf6c447a629e29145fa8cb13c
Reviewed-on: https://chromium-review.googlesource.com/777855
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523539}
Former-commit-id: 8914dbba60820721b2731ba61a6c227331a15921