net/nqe/network_quality_estimator_params.cc
@@ -377,6 +377,11 @@ NetworkQualityEstimatorParams::NetworkQualityEstimatorParams(
           GetValueForVariationParam(params_,
                                     "throughput_min_transfer_size_kilobytes",
                                     32)),
+      throughput_hanging_requests_cwnd_size_multiplier_(
+          GetDoubleValueForVariationParamWithDefaultValue(
+              params_,
+              "throughput_hanging_requests_cwnd_size_multiplier",
+              -1)),
       weight_multiplier_per_second_(GetWeightMultiplierPerSecond(params_)),
       weight_multiplier_per_signal_strength_level_(
           GetDoubleValueForVariationParamWithDefaultValue(
@@ -404,6 +409,21 @@ NetworkQualityEstimatorParams::NetworkQualityEstimatorParams(
               params_,
               "upper_bound_http_rtt_transport_rtt_multiplier",
               -1)),
+      hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_(
+          GetValueForVariationParam(
+              params_,
+              "hanging_request_http_rtt_upper_bound_transport_rtt_multiplier",
+              -1)),
+      hanging_request_http_rtt_upper_bound_http_rtt_multiplier_(
+          GetValueForVariationParam(
+              params_,
+              "hanging_request_http_rtt_upper_bound_http_rtt_multiplier",
+              -1)),
+      hanging_request_upper_bound_min_http_rtt_(
+          base::TimeDelta::FromMilliseconds(GetValueForVariationParam(
+              params_,
+              "hanging_request_upper_bound_min_http_rtt_msec",
+              -1))),
       http_rtt_transport_rtt_min_count_(
           GetValueForVariationParam(params_,
                                     "http_rtt_transport_rtt_min_count",
@@ -453,6 +473,20 @@ NetworkQualityEstimatorParams::NetworkQualityEstimatorParams(
          upper_bound_http_rtt_transport_rtt_multiplier_ == -1 ||
          lower_bound_http_rtt_transport_rtt_multiplier_ <
              upper_bound_http_rtt_transport_rtt_multiplier_);
+
+  DCHECK(hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_ == -1 ||
+         hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_ > 0);
+  DCHECK(hanging_request_http_rtt_upper_bound_http_rtt_multiplier_ == -1 ||
+         hanging_request_http_rtt_upper_bound_http_rtt_multiplier_ > 0);
+  DCHECK(hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_ == -1 ||
+         hanging_request_http_rtt_upper_bound_http_rtt_multiplier_ == -1 ||
+         hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_ >=
+             hanging_request_http_rtt_upper_bound_http_rtt_multiplier_);
+
+  DCHECK(upper_bound_http_rtt_transport_rtt_multiplier_ == -1 ||
+         hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_ == -1 ||
+         upper_bound_http_rtt_transport_rtt_multiplier_ <
+             hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_);
 
   const auto algorithm_it = params_.find("effective_connection_type_algorithm");
   effective_connection_type_algorithm_ =
