net/nqe/network_quality_estimator_params.h
@@ -139,6 +139,14 @@ class NET_EXPORT NetworkQualityEstimatorParams {
     effective_connection_type_algorithm_ = algorithm;
   }
 
+  // Number of bytes received during a throughput observation window of duration
+  // 1 HTTP RTT should be at least the value returned by this method times
+  // the typical size of a congestion window. If not, the throughput observation
+  // window is heuristically determined as hanging.
+  double throughput_hanging_requests_cwnd_size_multiplier() const {
+    return throughput_hanging_requests_cwnd_size_multiplier_;
+  }
+
   // Returns the multiplier by which the transport RTT should be multipled when
   // computing the HTTP RTT. The multiplied value of the transport RTT serves
   // as a lower bound to the HTTP RTT estimate. e.g., if the multiplied
@@ -155,6 +163,24 @@ class NET_EXPORT NetworkQualityEstimatorParams {
   // 100 msec. Returns a negative value if the param is not set.
   double upper_bound_http_rtt_transport_rtt_multiplier() const {
     return upper_bound_http_rtt_transport_rtt_multiplier_;
+  }
+
+  // For the purpose of estimating the HTTP RTT, a request is marked as hanging
+  // only if its RTT is at least this times the transport RTT estimate.
+  int hanging_request_http_rtt_upper_bound_transport_rtt_multiplier() const {
+    return hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_;
+  }
+
+  // For the purpose of estimating the HTTP RTT, a request is marked as hanging
+  // only if its RTT is at least this times the HTTP RTT estimate.
+  int hanging_request_http_rtt_upper_bound_http_rtt_multiplier() const {
+    return hanging_request_http_rtt_upper_bound_http_rtt_multiplier_;
+  }
+
+  // For the purpose of estimating the HTTP RTT, a request is marked as hanging
+  // only if its RTT is at least as much the value returned by this method.
+  base::TimeDelta hanging_request_upper_bound_min_http_rtt() const {
+    return hanging_request_upper_bound_min_http_rtt_;
   }
 
   // Returns the number of transport RTT observations that should be available
@@ -240,6 +266,7 @@ class NET_EXPORT NetworkQualityEstimatorParams {
 
   const size_t throughput_min_requests_in_flight_;
   const int throughput_min_transfer_size_kilobytes_;
+  const double throughput_hanging_requests_cwnd_size_multiplier_;
   const double weight_multiplier_per_second_;
   const double weight_multiplier_per_signal_strength_level_;
   const double correlation_uma_logging_probability_;
@@ -248,6 +275,9 @@ class NET_EXPORT NetworkQualityEstimatorParams {
   const base::TimeDelta min_socket_watcher_notification_interval_;
   const double lower_bound_http_rtt_transport_rtt_multiplier_;
   const double upper_bound_http_rtt_transport_rtt_multiplier_;
+  const int hanging_request_http_rtt_upper_bound_transport_rtt_multiplier_;
+  const int hanging_request_http_rtt_upper_bound_http_rtt_multiplier_;
+  const base::TimeDelta hanging_request_upper_bound_min_http_rtt_;
   const size_t http_rtt_transport_rtt_min_count_;
   const base::TimeDelta increase_in_transport_rtt_logging_interval_;
   const base::TimeDelta recent_time_threshold_;
