net/nqe/network_quality_estimator_test_util.h
@@ -237,6 +237,7 @@ class TestNetworkQualityEstimator : public NetworkQualityEstimator {
   using NetworkQualityEstimator::OnUpdatedTransportRTTAvailable;
   using NetworkQualityEstimator::AddAndNotifyObserversOfRTT;
   using NetworkQualityEstimator::AddAndNotifyObserversOfThroughput;
+  using NetworkQualityEstimator::IsHangingRequest;
 
  private:
   class LocalHttpTestServer : public EmbeddedTestServer {
